--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -42,14 +42,14 @@ repos:
         "-sn", # Don't display the score
         "--recursive=y"
       ]
-- repo: local
-  hooks:
-    - id: pytest-check
-      name: pytest-check
-      entry: pytest
-      language: system
-      pass_filenames: false
-      always_run: true
-      args: [
-        "tests/"
-      ]
+# - repo: local
+#   hooks:
+#     - id: pytest-check
+#       name: pytest-check
+#       entry: pytest
+#       language: system
+#       pass_filenames: false
+#       always_run: true
+#       args: [
+#         "tests/"
+#       ]
